# SpamTeacher

./: CMakeLists.txt  CMakeListsGtk.txt  Makefile  README  SpamTeacher  SpamTeacher.pro  icon.xpm  readme.txt  todo(en).txt  todo.txt
language/: ru.po  ru.qm  ru.ts
src/: Data.cpp  Data.h  Receiver.h
src/interface/: func.cpp  func.h  interface.h
src/interface/gtk/: About.cpp  About.h  AddReceiverWindow.cpp  AddReceiverWindow.h  AtachmentWindow.cpp  AtachmentWindow.h  Data.cpp  Data.h  GenderWindow.cpp  GenderWindow.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile2  README2  Receiver.h  ReceiverWindow.cpp  ReceiverWindow.h  SendWindow.cpp  SendWindow.h  SenderWindow.cpp  SenderWindow.h  gui.cpp  gui.h  readme.txt
src/interface/qt/: About.cpp  About.h  AddMultReceiverWindow.cpp  AddMultReceiverWindow.h  AddReceiverWindow.cpp  AddReceiverWindow.h  AtachmentWindow.cpp  AtachmentWindow.h  BaseWindow.cpp  BaseWindow.h  Delegate.cpp  Delegate.h  GenderWindow.cpp  GenderWindow.h  MainWindow.cpp  MainWindow.h  PassWindow.cpp  PassWindow.h  ReceiverWindow.cpp  ReceiverWindow.h  SendWindow.cpp  SendWindow.h  SenderWindow.cpp  SenderWindow.h  main.cpp
src/send/: Makefile  send.cpp  send.hpp  test.cpp  u82w1251.cpp  u82w1251.hpp
